# certbot-plugin-gandi

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
certbot_plugin_gandi_modern/: gandi_api.py  main.py
contrib/: certbot-dns-gandi-renew.service
