[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certbot-plugin-gandi-modern"
description = "Certbot plugin for authentication using Gandi LiveDNS - modern"
readme = "README.md"
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.9"

authors = [
    { name = "Yohann Leon", email = "yohann@leon.re" },
    { name = "Thomas Kriechbaumer", email = "thomas@kriechbaumer.name" },
]

dependencies = [
    "certbot>=2.4.0,<4",
    "requests>=2.32.3,<3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.entry-points."certbot.plugins"]
dns-gandi = "certbot_plugin_gandi_modern.main:Authenticator"

[project.urls]
Homepage = "https://github.com/Kriechi/certbot-plugin-gandi-modern"

[tool.hatch.version]
path = "certbot_plugin_gandi_modern/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/certbot_plugin_gandi_modern",
]
exclude = [
    "/dist/",
    "/tmp/",
    "gandi.ini",
]
